# pyctor

./: LICENSE  pyproject.toml
docs/: introduction.md  multiprocess.md
examples/: abstract_behavior.py  actors.py  actors_func.py  ask_func.py  behavior.py  behavior_change_func.py  behavior_change_oop.py  children_func.py  counter_func.py  counter_more_func.py  counter_ooo.py  counter_oop.py  multiprocess.py  multiprocess_func.py  parallel.py  perfect_func.py  self_ref_func.py  setup_func.py  setup_oop.py  simple.py  simple_func.py  simple_oop.py  stash_func.py  supervise_func.py  supervise_setup_func.py  test.py  tractor.py
examples/func/: ask_func.py  behavior_change_func.py  children_func.py  multiprocess_func.py  self_ref_func.py  setup_func.py  simple_func.py  stash_func.py  supervise_func.py  supervise_setup_func.py
examples/oop/: behavior_change_oop.py  counter_ooo.py  counter_oop.py  setup_oop.py
experiments/: messagespec.py  multiprocess.py  raw.py  setup.py  subprocess.py  subprocess_server.py
src/pyctor/: __init__.py  _util.py  actor.py  behavior.py  behaviors.py  configuration.py  context.py  defaults.py  dispatch.py  interceptors.py  mailbox.py  message_strategies.py  messages.py  props.py  ref.py  registry.py  sender.py  signals.py  spawn.py  spawner.py  stash.py  strategies.py  system.py  testing.py  types.py
src/pyctor/behavior/: impl.py  process.py  supervise.py
src/pyctor/dispatch/: multi_process.py  single_process.py
src/pyctor/multicore/: child.py  server.py
src/tests/: conftest.py  ref_test.py  registry_test.py  test_behaviors.py
(+37 files in other folders)
