[tool.poetry]
name = "pyctor"
version = "0.1.0"
description = "A Python Actor Framework with asyncio"
authors = ["Nils Plaschke <Chumper@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
pykka = "^3.1.1"
mypy = "^0.982"

[tool.poetry.dev-dependencies]
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
