[tool.poetry]
name = "pyctor"
version = "0.1.0"
description = "A Python Actor Framework with asyncio"
authors = ["Nils Plaschke <Chumper@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
trio = "^0.22.0"
exceptiongroup = "^1.0.0-rc.9"
msgspec = "^0.9.1"
pytypes = "^1.0b10"

[tool.poetry.dev-dependencies]
black = {version = "^22.10.0", allow-prereleases = true}
mypy = "^0.982"
trio-typing = "^0.7.0"
coverage = "^6.5.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
